--- a/General/UNet.ipynb
+++ b/General/UNet.ipynb
@@ -14,10 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torchvision.transforms.functional as TF\n",
@@ -27,12 +29,22 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROCESSED_IMAGES_DIR = Path('/home/onkar/DATASET/carvana-image-masking-challenge/processed/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,9 +173,9 @@
     "        for down in self.downs:\n",
     "            x = down(x)\n",
     "            skip_conn.append(x)\n",
-    "            print(f'Before Pool : x.shape : {x.shape}')\n",
+    "            #print(f'Before Pool : x.shape : {x.shape}')\n",
     "            x = self.pool(x)\n",
-    "            print(f'After Pool : x.shape : {x.shape}')\n",
+    "            #print(f'After Pool : x.shape : {x.shape}')\n",
     "            idx += 1\n",
     "        \n",
     "        x = self.bottleneck(x)\n",
@@ -173,7 +185,7 @@
     "        for up_conv, up in zip(self.up_convs, self.ups):\n",
     "            x = up_conv(x)\n",
     "            if x.shape != skip_conn[idx].shape:\n",
-    "                print(f'x.shape : {x.shape}, skip_conn[{idx}].shape : {skip_conn[idx].shape}')\n",
+    "                #print(f'x.shape : {x.shape}, skip_conn[{idx}].shape : {skip_conn[idx].shape}')\n",
     "                skip_conn[idx] = self.crop_tensor(skip_conn[idx], x)\n",
     "            x = torch.concat((x, skip_conn[idx]), dim=1)\n",
     "            x = up(x)\n",
@@ -183,58 +195,134 @@
     "        # print(x.shape)\n",
     "        final = self.final_conv(x)\n",
     "        # print(final.shape)\n",
-    "        return final\n",
-    "    \n",
-    "# def test():\n",
-    "#     x = torch.randn((1, 3, 512, 512))\n",
-    "#     model = UNet(in_channels=3, out_channels=2)\n",
-    "#     pred = model(x)\n",
-    "#     print(x.shape)\n",
-    "#     print(pred.shape)\n",
-    "    \n",
-    "# test()"
+    "        return final"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 1792, 832])\n",
+      "torch.Size([1, 3, 1792, 832])\n"
+     ]
+    }
+   ],
    "source": [
-    "TRAIN_ROOT_DIR = Path('/home/onkar/DATASET/carvana-image-masking-challenge/train')\n",
-    "\n",
-    "TRAIN_IMG_FILES_DIR = TRAIN_ROOT_DIR/'train'\n",
-    "TRAIN_MSK_FILES_DIR = TRAIN_ROOT_DIR/'train_masks'\n",
-    "\n",
-    "# 00087a6bd4dc_12.jpg,00087a6bd4dc_10_mask.gif\n",
-    "# 00087a6bd4dc_11.jpg,00087a6bd4dc_11_mask.gif\n",
-    "# 00087a6bd4dc_10.jpg,00087a6bd4dc_12_mask.gif\n",
-    "\n",
-    "fig, axes \n",
-    "\n",
-    "\n",
-    "\n",
-    "# \n",
-    "# pd.read_csv(TRAIN_ROOT_DIR/'train_masks.csv')"
+    "def test():\n",
+    "    x = torch.randn((1, 3, 1792, 832))\n",
+    "    model = UNet(in_channels=3, out_channels=2)\n",
+    "    pred = model(x)\n",
+    "    print(x.shape)\n",
+    "    print(pred.shape)\n",
+    "    \n",
+    "test()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# random.seed(42)\n",
+    "\n",
     "class CaravanaDataset(Dataset):\n",
-    "    def __int__(self, root_dir, transform):\n",
+    "    def __init__(self, root_dir) -> None:\n",
     "        super(CaravanaDataset, self).__init__()\n",
-    "        self.all_files = self.extract_files(root)\n",
+    "        self.all_files = self.create_file_list(root_dir)\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def create_file_list(root_dir):\n",
+    "        images = root_dir/'images'\n",
+    "        masks  = root_dir/'masks'\n",
+    "        \n",
+    "        # print(f'Image file : {images}, Mask file : {images}')\n",
+    "        \n",
+    "        all_files = []\n",
+    "        for img_fl in images.glob('*.npy'):\n",
+    "            mask_fl = img_fl.with_stem(img_fl.stem + '_mask').with_suffix('.npy')\n",
+    "            \n",
+    "            parts = list(mask_fl.parts)\n",
+    "            parts[-2] = 'masks'\n",
+    "            mask_fl = Path(*parts)\n",
+    "            \n",
+    "            # print(f'Image file : {img_fl}, Mask file : {mask_fl}')\n",
+    "            \n",
+    "            all_files.append((img_fl, mask_fl))\n",
+    "        \n",
+    "        random.shuffle(all_files)\n",
+    "        \n",
+    "        return all_files\n",
     "    \n",
     "    def __len__(self):\n",
-    "        return None\n",
+    "        return len(self.all_files)\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
-    "        return None    "
+    "        ## Apply augmentations before returning\n",
+    "        \n",
+    "        # get the item at index idx\n",
+    "        image, mask = self.all_files[idx]\n",
+    "        \n",
+    "        return (image, mask)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3561\n",
+      "(PosixPath('/home/onkar/DATASET/carvana-image-masking-challenge/processed/train/images/0de66245f268_05.npy'), PosixPath('/home/onkar/DATASET/carvana-image-masking-challenge/processed/train/masks/0de66245f268_05_mask.npy'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "TRAINING_DATASET = PROCESSED_IMAGES_DIR/'train'\n",
+    "\n",
+    "train_ds = CaravanaDataset(TRAINING_DATASET)\n",
+    "print(len(train_ds))\n",
+    "\n",
+    "print(train_ds[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1527\n",
+      "(PosixPath('/home/onkar/DATASET/carvana-image-masking-challenge/processed/val/images/98ee0624de87_01.npy'), PosixPath('/home/onkar/DATASET/carvana-image-masking-challenge/processed/val/masks/98ee0624de87_01_mask.npy'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "VALIDATION_DATASET = PROCESSED_IMAGES_DIR/'val'\n",
+    "\n",
+    "valid_ds = CaravanaDataset(VALIDATION_DATASET)\n",
+    "print(len(valid_ds))\n",
+    "\n",
+    "print(valid_ds[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
