--- a/UNet/01_PreprocessData.ipynb
+++ b/UNet/01_PreprocessData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,13 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4235cdd27664aec9d6860728155922e",
+       "model_id": "803e5660c33e4addbea78114eae438d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,8 +101,12 @@
     "        A.Crop(x_min=left, y_min=top, x_max=width - right, y_max=height - bottom),\n",
     "        A.Resize(height=960, width=1792),\n",
     "        A.HorizontalFlip(p=0.5),\n",
-    "        #A.Perspective(scale=(0.05, 0.1), p=0.5)\n",
-    "        \n",
+    "        A.Normalize(\n",
+    "            mean=[0.485, 0.456, 0.406],  # Mean for each channel for ImageNet dataset\n",
+    "            std=[0.229, 0.224, 0.225],  # Standard deviation for each channel for ImageNet dataset\n",
+    "            max_pixel_value=255.0,  # This is the default and assumes the input is in range [0, 255]\n",
+    "        )\n",
+    "        # A.ToTensorV2()\n",
     "    ])\n",
     "    \n",
     "    transformed = transform(image=np.array(image), mask=np.array(mask))\n",
