--- a/UNet/03_Model.ipynb
+++ b/UNet/03_Model.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,116 +213,16 @@
     }
    ],
    "source": [
-    "def test():\n",
-    "    x = torch.randn((1, 3, 1792, 832))\n",
-    "    model = UNet(in_channels=3, out_channels=2)\n",
-    "    pred = model(x)\n",
-    "    print(x.shape)\n",
-    "    print(pred.shape)\n",
+    "## For testing purpose only -- << COMMENT AFTER USE >> --\n",
+    "# def test():\n",
+    "#     x = torch.randn((1, 3, 1792, 832))\n",
+    "#     model = UNet(in_channels=3, out_channels=2)\n",
+    "#     pred = model(x)\n",
+    "#     print(x.shape)\n",
+    "#     print(pred.shape)\n",
     "    \n",
-    "test()"
+    "# test()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# random.seed(42)\n",
-    "\n",
-    "class CaravanaDataset(Dataset):\n",
-    "    def __init__(self, root_dir) -> None:\n",
-    "        super(CaravanaDataset, self).__init__()\n",
-    "        self.all_files = self.create_file_list(root_dir)\n",
-    "        \n",
-    "    @staticmethod\n",
-    "    def create_file_list(root_dir):\n",
-    "        images = root_dir/'images'\n",
-    "        masks  = root_dir/'masks'\n",
-    "        \n",
-    "        # print(f'Image file : {images}, Mask file : {images}')\n",
-    "        \n",
-    "        all_files = []\n",
-    "        for img_fl in images.glob('*.npy'):\n",
-    "            mask_fl = img_fl.with_stem(img_fl.stem + '_mask').with_suffix('.npy')\n",
-    "            \n",
-    "            parts = list(mask_fl.parts)\n",
-    "            parts[-2] = 'masks'\n",
-    "            mask_fl = Path(*parts)\n",
-    "            \n",
-    "            # print(f'Image file : {img_fl}, Mask file : {mask_fl}')\n",
-    "            \n",
-    "            all_files.append((img_fl, mask_fl))\n",
-    "        \n",
-    "        random.shuffle(all_files)\n",
-    "        \n",
-    "        return all_files\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        return len(self.all_files)\n",
-    "    \n",
-    "    def __getitem__(self, idx):\n",
-    "        ## Apply augmentations before returning\n",
-    "        \n",
-    "        # get the item at index idx\n",
-    "        image, mask = self.all_files[idx]\n",
-    "        \n",
-    "        return (image, mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3561\n",
-      "(PosixPath('/home/onkar/DATASET/carvana-image-masking-challenge/processed/train/images/0de66245f268_05.npy'), PosixPath('/home/onkar/DATASET/carvana-image-masking-challenge/processed/train/masks/0de66245f268_05_mask.npy'))\n"
-     ]
-    }
-   ],
-   "source": [
-    "TRAINING_DATASET = PROCESSED_IMAGES_DIR/'train'\n",
-    "\n",
-    "train_ds = CaravanaDataset(TRAINING_DATASET)\n",
-    "print(len(train_ds))\n",
-    "\n",
-    "print(train_ds[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1527\n",
-      "(PosixPath('/home/onkar/DATASET/carvana-image-masking-challenge/processed/val/images/98ee0624de87_01.npy'), PosixPath('/home/onkar/DATASET/carvana-image-masking-challenge/processed/val/masks/98ee0624de87_01_mask.npy'))\n"
-     ]
-    }
-   ],
-   "source": [
-    "VALIDATION_DATASET = PROCESSED_IMAGES_DIR/'val'\n",
-    "\n",
-    "valid_ds = CaravanaDataset(VALIDATION_DATASET)\n",
-    "print(len(valid_ds))\n",
-    "\n",
-    "print(valid_ds[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
