--- a/UNet/03_Model.ipynb
+++ b/UNet/03_Model.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
     "        self.pool       = nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "        \n",
     "        # Final conv\n",
-    "        self.final_conv = nn.Conv2d(features[0], out_channels=3, kernel_size=1)\n",
+    "        self.final_conv = nn.Conv2d(features[0], out_channels=1, kernel_size=1)\n",
     "    \n",
     "        # Implemenation of DOWN part ->\n",
     "        for feature in features:\n",
@@ -147,24 +147,28 @@
     "        # lowest part of 'U'\n",
     "        self.bottleneck = DoubleConv(features[-1], 2*features[-1])\n",
     "    \n",
-    "    # Implementation of cropping function for skip connection\n",
-    "    def crop_tensor(self, target_tensor, ref_tensor):\n",
-    "        # Calcualte the cropping size fo the spatial dimensions (H & W)\n",
-    "        delta_h = target_tensor.shape[2] - ref_tensor.shape[2]\n",
-    "        delta_w = target_tensor.shape[3] - ref_tensor.shape[3]\n",
+    "    # # Implementation of cropping function for skip connection\n",
+    "    # def crop_tensor(self, target_tensor, ref_tensor):\n",
+    "    #     # Calcualte the cropping size fo the spatial dimensions (H & W)\n",
+    "    #     delta_h = target_tensor.shape[2] - ref_tensor.shape[2]\n",
+    "    #     delta_w = target_tensor.shape[3] - ref_tensor.shape[3]\n",
     "        \n",
-    "        # Actually this code part is redundant as skip connection size will always\n",
-    "        # be larger than the size after max-pool\n",
-    "        crop_h1 = max(delta_h//2, 0)\n",
-    "        crop_w1 = max(delta_w//2, 0)\n",
+    "    #     if delta_h % 2 != 0 : delta_h += 1 \n",
+    "    #     if delta_w % 2 != 0 : delta_w += 1 \n",
+    "    #     print(f'target_tensor.size : {target_tensor.size()}, ref_tensor.size : {ref_tensor.size()}')\n",
     "        \n",
-    "        crop_h2 = crop_h1 + ref_tensor.shape[2]\n",
-    "        crop_w2 = crop_w1 + ref_tensor.shape[3]\n",
+    "    #     # crop_h1 = max(delta_h//2, 0)\n",
+    "    #     # crop_w1 = max(delta_w//2, 0)\n",
+    "    #     crop_h1 = delta_h//2\n",
+    "    #     crop_w1 = delta_w//2\n",
     "        \n",
-    "        crop_h2 = min(crop_h2, target_tensor.shape[2])\n",
-    "        crop_w2 = min(crop_w2, target_tensor.shape[3])\n",
+    "    #     crop_h2 = crop_h1 + ref_tensor.shape[2]\n",
+    "    #     crop_w2 = crop_w1 + ref_tensor.shape[3]\n",
     "        \n",
-    "        return target_tensor[:, :, crop_h1:crop_h2, crop_w1:crop_w2]\n",
+    "    #     # crop_h2 = min(crop_h2, target_tensor.shape[2])\n",
+    "    #     # crop_w2 = min(crop_w2, target_tensor.shape[3])\n",
+    "        \n",
+    "    #     return target_tensor[:, :, crop_h1:crop_h2, crop_w1:crop_w2]\n",
     "            \n",
     "    def forward(self, x):\n",
     "        skip_conn = []\n",
@@ -185,8 +189,13 @@
     "        for up_conv, up in zip(self.up_convs, self.ups):\n",
     "            x = up_conv(x)\n",
     "            if x.shape != skip_conn[idx].shape:\n",
-    "                #print(f'x.shape : {x.shape}, skip_conn[{idx}].shape : {skip_conn[idx].shape}')\n",
-    "                skip_conn[idx] = self.crop_tensor(skip_conn[idx], x)\n",
+    "                x = TF.resize(x, size=skip_conn[idx].shape[2:], antialias=True)\n",
+    "                # Original model does cropping, but there are issues with it that\n",
+    "                # needs to be fixed first. For now, let's use simple resizing to make x to the size of\n",
+    "                # skip connection.\n",
+    "                \n",
+    "                # print(f'x.shape : {x.shape}, skip_conn[{idx}].shape : {skip_conn[idx].shape}')\n",
+    "                # skip_conn[idx] = self.crop_tensor(skip_conn[idx], x)\n",
     "            x = torch.concat((x, skip_conn[idx]), dim=1)\n",
     "            x = up(x)\n",
     "            \n",
@@ -200,23 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 3, 1792, 832])\n",
-      "torch.Size([1, 3, 1792, 832])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## For testing purpose only -- << COMMENT AFTER USE >> --\n",
+    "# # For testing purpose only -- << COMMENT AFTER USE >> --\n",
     "# def test():\n",
-    "#     x = torch.randn((1, 3, 1792, 832))\n",
-    "#     model = UNet(in_channels=3, out_channels=2)\n",
+    "#     x = torch.randn((1, 3, 312,617))\n",
+    "#     model = UNet(in_channels=3, out_channels=1)\n",
     "#     pred = model(x)\n",
     "#     print(x.shape)\n",
     "#     print(pred.shape)\n",
