--- a/UNet/02_Dataset.ipynb
+++ b/UNet/02_Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,13 +116,13 @@
     "# # print(image1, mask1)\n",
     "# fig, axes = plt.subplots(1, 2, figsize=(10, 10))\n",
     "# axes[0].imshow(image1[0].numpy())\n",
-    "# axes[1].imshow(mask1[0].numpy())\n",
+    "# axes[1].imshow(mask1[0].numpy(), cmap='gray')\n",
     "# plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
     "\n",
     "# fig, axes = plt.subplots(1, 2, figsize=(10, 10))\n",
     "# axes[0].imshow(image2[0].numpy())\n",
-    "# axes[1].imshow(mask2[0].numpy())\n",
+    "# axes[1].imshow(mask2[0].numpy(), cmap='gray')\n",
     "# plt.show()"
    ]
   },
